--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.4.0",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
+    "lodash.debounce": "^4.0.8",
     "next": "13.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
